pufferlib/ocean/tower_climb/tower_climb.h

//logs
#define LOG_BUFFER_SIZE 1024
typedef struct Level Level;
struct Level {
    int* map;
    int rows;
    int cols;
    int size;
    int total_length;
    int goal_location;
    int spawn_location;
};
void init_level(Level* lvl){
	lvl->map = calloc(1000,sizeof(unsigned int));
    lvl->rows = 10;
    lvl->cols = 10;
    lvl->size = 100;
    lvl->total_length = 1000;
    lvl->goal_location = 999;
    lvl->spawn_location = 0;
}
typedef struct PuzzleState PuzzleState;
struct PuzzleState {
    unsigned char* blocks;
    int robot_position;
    int robot_orientation;
    int robot_state;
    int block_grabbed;
};
void init_puzzle_state(PuzzleState* ps){
	ps->blocks = calloc(BLOCK_BYTES, sizeof(unsigned char));
}
typedef struct Log Log;
struct Log {
    float episode_return;
    float episode_length;
    float rows_cleared;
    float levels_completed;
};
typedef struct LogBuffer LogBuffer;
struct LogBuffer {
    Log* logs;
    int length;
    int idx;
};
LogBuffer* allocate_logbuffer(int size) {
    LogBuffer* logs = (LogBuffer*)calloc(1, sizeof(LogBuffer));
    logs->logs = (Log*)calloc(size, sizeof(Log));
    logs->length = size;
    logs->idx = 0;
    return logs;
}
void free_logbuffer(LogBuffer* buffer) {
    free(buffer->logs);
    free(buffer);
}
Log aggregate_and_clear(LogBuffer* logs) {
    Log log = {0};
    if (logs->idx == 0) return log;  // Avoid division by zero

    for (int i = 0; i < logs->idx; i++) {
        log.episode_return  += logs->logs[i].episode_return  / logs->idx;
        log.episode_length  += logs->logs[i].episode_length  / logs->idx;
        log.rows_cleared    += logs->logs[i].rows_cleared    / logs->idx;
	    log.levels_completed += logs->logs[i].levels_completed / logs->idx;
    }

    logs->idx = 0;
    return log;
}
typedef struct CTowerClimb CTowerClimb;
struct CTowerClimb {
    unsigned char* observations;
    int* actions;
    float* rewards;
    unsigned char* dones;
    LogBuffer* log_buffer;
    Log log;
    float score;
    Level* level;
    PuzzleState* state;  // Contains blocks bitmask, position, orientation, etc.
    int rows_cleared;
    float reward_climb_row;
    float reward_fall_row;
    float reward_illegal_move;
    float reward_move_block;
};
void levelToPuzzleState(Level* level, PuzzleState* state) {
    memset(state->blocks, 0, BLOCK_BYTES);
    for (int i = 0; i < level->total_length; i++) {
        if (level->map[i] == 1) {
            SET_BIT(state->blocks, i);
        }
    }
    state->robot_position = level->spawn_location;
    state->robot_orientation = UP;  
    state->robot_state = 0;        
    state->block_grabbed = -1;    
}
void init(CTowerClimb* env) {
	env->level = calloc(1, sizeof(Level));
    env->state = calloc(1, sizeof(PuzzleState));	
    init_level(env->level);
    init_puzzle_state(env->state);
    env->rows_cleared = 0;
}
void setPuzzle(CTowerClimb* env, PuzzleState* src, Level* lvl){
	memcpy(env->state->blocks, src->blocks, BLOCK_BYTES * sizeof(unsigned char));
	env->state->robot_position = src->robot_position;
	env->state->robot_orientation = src->robot_orientation;
	env->state->robot_state = src->robot_state;
	env->state->block_grabbed = src->block_grabbed; 
    memcpy(env->level->map, lvl->map, lvl->total_length * sizeof(int));
    env->level->rows = lvl->rows;
    env->level->cols = lvl->cols;
    env->level->size = lvl->size;
    env->level->total_length = lvl->total_length;
    env->level->goal_location = lvl->goal_location;
    env->level->spawn_location = lvl->spawn_location;
}
void free_allocated(CTowerClimb* env) {
    free(env->actions);
    free(env->observations);
    free(env->dones);
    free(env->rewards);
    free_logbuffer(env->log_buffer);
    free_initialized(env);
    free(env);
}
void c_reset(CTowerClimb* env) {
    env->log = (Log){0};
    env->dones[0] = 0;
    env->rows_cleared = 0;
    memset(env->state->blocks, 0, BLOCK_BYTES * sizeof(unsigned char));
    compute_observations(env);
}
int c_step(CTowerClimb* env) {
    env->log.episode_length += 1.0;
    env->rewards[0] = 0.0;
    if(env->log.episode_length > 60){
         env->rewards[0] = 0;
         env->log.levels_completed = 0;
         add_log(env->log_buffer, &env->log);
         return 1;
    }
    // Create next state
    int move_result = applyAction(env->state, env->actions[0], env->level, RL_MODE, env);
    if (move_result == MOVE_ILLEGAL) {
        illegal_move(env);
        return 0;
    }
    if (move_result == MOVE_DEATH){
        death(env);
        return 1;
    }
    
    // Check for goal state
    if (isGoal(env->state, env->level)) {
        env->rewards[0] = 1.0;
        env->log.episode_return +=1.0;
        env->log.levels_completed = 1.0;
        add_log(env->log_buffer, &env->log);
        return 1;
    }
    
    // Update observations
    compute_observations(env);
    return 0;
}
typedef struct BFSNode {
    PuzzleState state;
    int depth;      // how many moves from start
    int parent;     // index in BFS array of who generated me
    int action;     // which action led here (if you want to reconstruct the path)
} BFSNode;
static BFSNode* queueBuffer = NULL;
// hash table for visited states
typedef struct VisitedNode {
    PuzzleState state;
    uint64_t hashVal;
    struct VisitedNode* next;
} VisitedNode;
void init_random_level(CTowerClimb* env, int goal_level, int max_moves, int min_moves, int seed) {
	time_t t;
    srand((unsigned) time(&t) + seed); // Increment seed for each level
    reset_level(env->level);
    gen_level(env->level, goal_level);
    // guarantee a map is created
    while(env->level->spawn_location == 0 || env->level->goal_location == 999 || verify_level(env->level,max_moves, min_moves) == 0){
        reset_level(env->level);
        gen_level(env->level,goal_level);
    }
    levelToPuzzleState(env->level, env->state);
}
void cy_init_random_level(Level* level, int goal_level, int max_moves, int min_moves, int seed) {
    time_t t;
    srand((unsigned) time(&t) + seed); // Increment seed for each level
    gen_level(level, goal_level);
    // guarantee a map is created
    while(level->spawn_location == 0 || level->goal_location == 999 || verify_level(level,max_moves, min_moves) == 0){
        gen_level(level, goal_level);
    }
}
typedef enum {
    ANIM_IDLE,
    ANIM_RUNNING,
    ANIM_CLIMBING,
    ANIM_HANGING,
    ANIM_START_GRABBING,
    ANIM_GRABBING,
    ANIM_SHIMMY_RIGHT,
    ANIM_SHIMMY_LEFT,
} AnimationState;
typedef struct Client Client;
struct Client {
    float width;
    float height;
    Texture2D puffers;
    Texture2D background;
    Camera3D camera;
    Model robot;
    Light lights[MAX_LIGHTS];
    Shader shader; 
    ModelAnimation* animations;
    int animFrameCounter;
    AnimationState animState;
    int previousRobotPosition;
    Vector3 visualPosition;
    Vector3 targetPosition;
    int isMoving;
    float moveProgress;
    Model cube;
    float scale;
    int enable_animations;
};
Client* make_client(CTowerClimb* env) {
    Client* client = (Client*)calloc(1, sizeof(Client));
    client->width = 1600;
    client->height = 900;
    SetConfigFlags(FLAG_MSAA_4X_HINT);  // Enable MSAA
    InitWindow(client->width, client->height, "PufferLib Ray Tower Climb");
    SetTargetFPS(60);
    // camera
    client->camera = (Camera3D){ 0 };
    client->camera.position = (Vector3){ 0.0f, 25.0f, 20.0f };  // Move camera further back and higher up
    client->camera.target = (Vector3){ 2.0f, 4.0f, 2.0f };     // Keep looking at same target point
    client->camera.up = (Vector3){ 0.0f, 1.0f, 0.0f };
    client->camera.fovy = 45.0f;
    client->camera.projection = CAMERA_PERSPECTIVE;
    // load background
    client->background = LoadTexture("resources/tower_climb/space2.jpg");
    client->puffers = LoadTexture("resources/puffers_128.png");
    // load robot & cube models
    client->robot = LoadModel("resources/tower_climb/small_astro.glb");
    client->cube = LoadModel("resources/tower_climb/spacerock.glb");
    BoundingBox bounds = GetModelBoundingBox(client->cube);
    float cubeSize = bounds.max.x - bounds.min.x;
    float scale = 1.0f / cubeSize;
    client->scale = scale; 
    int animCount = 0;
    client->animations = LoadModelAnimations("resources/tower_climb/small_astro.glb", &animCount);
    printf("Loaded %d animations\n", animCount);
    client->animState = ANIM_IDLE;
    client->animFrameCounter = 0;
    UpdateModelAnimation(client->robot, client->animations[4], 0); 
    // Load and configure shader
    char vsPath[256];
    char fsPath[256];
    sprintf(vsPath, "resources/tower_climb/shaders/gls%i/lighting.vs", GLSL_VERSION);
    sprintf(fsPath, "resources/tower_climb/shaders/gls%i/lighting.fs", GLSL_VERSION);
    client->shader = LoadShader(vsPath, fsPath);
    // Get shader locations
    client->shader.locs[SHADER_LOC_VECTOR_VIEW] = GetShaderLocation(client->shader, "viewPos");
    // Set up ambient light
    int ambientLoc = GetShaderLocation(client->shader, "ambient");
    float ambient[4] = { 0.1f, 0.1f, 0.1f, 1.0f };
    SetShaderValue(client->shader, ambientLoc, ambient, SHADER_UNIFORM_VEC4);
    // apply lighting shader
    client->robot.materials[0].shader = client->shader;
    client->cube.materials[0].shader = client->shader;
    // Create lights with much brighter colors and closer positions
    client->lights[0] = CreateLight(LIGHT_POINT, 
        (Vector3){ 10.0f, 7.0f, 5.0f },  // Front
        Vector3Zero(), 
        WHITE,  // ~12% intensity
        client->shader);
    // Very dim fill lights
    client->lights[1] = CreateLight(LIGHT_POINT, 
        (Vector3){ 3.0f, 5.0f, 8.0f },  // Right side
        Vector3Zero(), 
        (Color){ 40, 40, 40, 255 },  // ~15% intensity
        client->shader);
    
    client->lights[2] = CreateLight(LIGHT_POINT, 
        (Vector3){ 10.0f, 7.0f, 5.0f },  // Front
        Vector3Zero(), 
        (Color){ 30, 30, 30, 255 },  // ~12% intensity
        client->shader);
    
    client->lights[3] = CreateLight(LIGHT_POINT, 
        (Vector3){ 10.0f, 6.0f, -5.0f },  // Left side
        Vector3Zero(), 
        (Color){ 20, 20, 20, 255 },  // ~8% intensity
        client->shader);

    // Make sure both models' materials use the lighting shader
    for (int i = 0; i < client->robot.materialCount; i++) {
        client->robot.materials[i].shader = client->shader;
    }
    for (int i = 0; i < client->cube.materialCount; i++) {
        client->cube.materials[i].shader = client->shader;
    }
    client->animState = ANIM_IDLE;
    client->previousRobotPosition = env->state->robot_position;
    // Initialize visual position to match starting robot position
    int floor = env->state->robot_position / env->level->size;
    int grid_pos = env->state->robot_position % env->level->size;
    int x = grid_pos % env->level->cols;
    int z = grid_pos / env->level->cols;
    client->visualPosition = (Vector3){ 
        x * 1.0f,
        floor * 1.0f,
        z * 1.0f
    };
    client->targetPosition = client->visualPosition;  // Initialize target to match
    return client;
}
void c_render(Client* client, CTowerClimb* env) {
    if (IsKeyDown(KEY_ESCAPE)) exit(0);
    // Handle state transitions - drop animation
    if (env->state->robot_state == DEFAULT && client->animState == ANIM_HANGING && client->enable_animations) {
        update_animation(client, ANIM_IDLE);
        client->isMoving = false;
        client->visualPosition = client->targetPosition;
    }
    // grab animation
    if (env->state->block_grabbed != -1 && 
        client->animState != ANIM_GRABBING && 
        client->animState != ANIM_START_GRABBING && client->enable_animations) {
        update_animation(client, ANIM_START_GRABBING);
        client->isMoving = true;
    } else if (env->state->block_grabbed == -1 && client->animState == ANIM_GRABBING && client->enable_animations) {
        update_animation(client, ANIM_IDLE);
    }
    // Handle position changes
    if (env->state->robot_position != client->previousRobotPosition && client->enable_animations) {
        if (client->isMoving) client->visualPosition = client->targetPosition;
        client->isMoving = true;
        update_position(client, env);
        float verticalDiff = client->targetPosition.y - client->visualPosition.y;
        if (verticalDiff > 0.5) {
            orient_hang_offset(client, env, client->animState == ANIM_HANGING ? 0 : 1);
            update_animation(client, ANIM_CLIMBING);
        } else if (env->state->robot_state == HANGING) {
            handle_hanging_movement(client, env);
        } else {
            update_animation(client, verticalDiff < 0 ? ANIM_IDLE : ANIM_RUNNING);
            if (verticalDiff < 0) {
                client->isMoving = false;
                client->visualPosition = client->targetPosition;
            }
        }
        client->previousRobotPosition = env->state->robot_position;
    }
    if(!client->enable_animations) {
        update_position(client, env);
        client->visualPosition = client->targetPosition;
    }
    process_animation_frame(client, env);
    update_camera(client, env);
    render_scene(client, env);
}
void close_client(Client* client) {
    UnloadShader(client->shader);
    CloseWindow();
    UnloadModel(client->robot);
    free(client);
}